2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Fix regression in syntax warning diagnostics introduced
	in recent days' commits.  Now that we're scrupulous about the
	data type of an input character to GNU troff, our diagnostic
	apparatus takes us at our word when we pass it unsigned chars,
	and it formats them as decimal integers instead of characters.
	Use value constructors to pass C++ `char`s where appropriate.

	* src/roff/troff/input.cpp (is_conditional_expression_true):
	* src/roff/troff/number.cpp (is_valid_term): Do it.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_size): Clarify diagnostic when
	an `\s` escape sequence that is bracketed or delimited (a GNU
	extension) contains an invalid numeric expression.  Describe
	what we were expecting and what we got instead.

	Fixes <https://savannah.gnu.org/bugs/?67746>.  Problem
	observable since groff 1.22.3 and appears to date back to
	groff's birth.

2025-11-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Perform more careful comparisons of the `unsigned char`
	values the formatter reads from input (or a token sequence) by
	promoting either the token or a character literal to which it is
	compared to `int` to (A) explicitly avoid issues with the
	implementation-defined signedness of unqualified `char`, and (B)
	lay foundation for future migration of GNU troff's internal
	character type to a custom, wider type.

	* src/roff/troff/div.cpp (return_request):
	* src/roff/troff/reg.cpp (assign_register_format_request):
	* src/roff/troff/env.cpp (configure_tab_stops_request):
	* src/roff/troff/number.cpp (get_incr_number)
	(is_valid_expression, is_valid_term):
	* src/roff/troff/input.cpp (get_line_arg)
	(read_size)
	(is_conditional_expression_true):
	Construct integer from character literal.
	* src/roff/troff/env.cpp (adjust):
	* src/roff/troff/reg.cpp (assign_register_format_request):